--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "referral-friend-fe",
+  "name": "@bisonai/binary-option",
   "version": "0.1.0",
+  "description": "Binary Option DApp",
+  "author": "Bisonai",
+  "homepage": "https://github.com/Bisonai/orakl-demo-binary-option/tree/main/backend",
   "private": true,
   "scripts": {
     "dev": "next dev",
