--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@bisonai/binary-option",
+  "name": "@bisonai/orakl-demo-binary-option",
   "version": "0.1.0",
-  "description": "Binary Option DApp",
+  "description": "Orakl Network Binary Option DApp",
   "author": "Bisonai",
-  "homepage": "https://github.com/Bisonai/orakl-demo-binary-option/tree/main/backend",
+  "homepage": "https://github.com/Bisonai/orakl-demo-binary-option",
   "private": true,
   "scripts": {
     "dev": "next dev",
